--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/react-dom": "18.2.14",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.16",
-    "bun-types": "latest",
+    "bun-types": "^1.0.24",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
