--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.12.0",
     "stripe": "^14.10.0",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
