--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "embla-carousel-react": "^8.0.0-rc22",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.1",
     "lucide-react": "^0.309.0",
