--- a/package.json
+++ b/package.json
@@ -39,10 +39,16 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
+    "react-youtube": "^10.1.0",
+    "rehype-react": "^8.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "stripe": "^14.10.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
