--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-markdown": "^9.0.1",
     "react-youtube": "^10.1.0",
     "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "stripe": "^14.10.0",
