--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@builder.io/react-hydration-overlay": "^0.0.8",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
@@ -39,7 +41,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-image-gallery": "^1.3.0",
     "react-markdown": "^9.0.1",
+    "react-responsive-modal": "^6.4.2",
     "react-youtube": "^10.1.0",
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.0",
@@ -58,6 +62,7 @@
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/react-image-gallery": "^1.2.4",
     "@vercel/git-hooks": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "bun-types": "^1.0.24",
